--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,10 @@ repositories {
 
 dependencies {
 
-    compile('org.projectlombok:lombok:1.16.14')
-    compile('com.fasterxml.jackson.core:jackson-databind:2.9.4')
-
+    compile group: 'org.projectlombok', name: 'lombok', version: '1.16.14'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.4'
     compile group: 'org.thymeleaf', name: 'thymeleaf', version: '3.0.6.RELEASE'
-    compile 'com.github.jknack:handlebars:4.0.6'
+    compile group: 'com.github.jknack', name: 'handlebars', version: '4.0.6'
     compile group: 'net.sf.jtidy', name: 'jtidy', version: 'r938'
     compile group: 'org.xhtmlrenderer', name: 'flying-saucer-core', version: '9.1.6'
     compile group: 'org.xhtmlrenderer', name: 'flying-saucer-pdf-itext5', version: '9.1.6'
